; ModuleID = '/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_msghandler.c_is_maintenance_mode_cmd.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/char/ipmi/extr_ipmi_msghandler.c_is_maintenance_mode_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kernel_ipmi_msg = type { i64, i64 }

@IPMI_NETFN_APP_REQUEST = common dso_local global i64 0, align 8
@IPMI_COLD_RESET_CMD = common dso_local global i64 0, align 8
@IPMI_WARM_RESET_CMD = common dso_local global i64 0, align 8
@IPMI_NETFN_FIRMWARE_REQUEST = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kernel_ipmi_msg*)* @is_maintenance_mode_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_maintenance_mode_cmd(%struct.kernel_ipmi_msg* %0) #0 {
  %2 = alloca %struct.kernel_ipmi_msg*, align 8
  store %struct.kernel_ipmi_msg* %0, %struct.kernel_ipmi_msg** %2, align 8
  %3 = load %struct.kernel_ipmi_msg*, %struct.kernel_ipmi_msg** %2, align 8
  %4 = getelementptr inbounds %struct.kernel_ipmi_msg, %struct.kernel_ipmi_msg* %3, i32 0, i32 0
  %5 = load i64, i64* %4, align 8
  %6 = load i64, i64* @IPMI_NETFN_APP_REQUEST, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %20

8:                                                ; preds = %1
  %9 = load %struct.kernel_ipmi_msg*, %struct.kernel_ipmi_msg** %2, align 8
  %10 = getelementptr inbounds %struct.kernel_ipmi_msg, %struct.kernel_ipmi_msg* %9, i32 0, i32 1
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @IPMI_COLD_RESET_CMD, align 8
  %13 = icmp eq i64 %11, %12
  br i1 %13, label %26, label %14

14:                                               ; preds = %8
  %15 = load %struct.kernel_ipmi_msg*, %struct.kernel_ipmi_msg** %2, align 8
  %16 = getelementptr inbounds %struct.kernel_ipmi_msg, %struct.kernel_ipmi_msg* %15, i32 0, i32 1
  %17 = load i64, i64* %16, align 8
  %18 = load i64, i64* @IPMI_WARM_RESET_CMD, align 8
  %19 = icmp eq i64 %17, %18
  br i1 %19, label %26, label %20

20:                                               ; preds = %14, %1
  %21 = load %struct.kernel_ipmi_msg*, %struct.kernel_ipmi_msg** %2, align 8
  %22 = getelementptr inbounds %struct.kernel_ipmi_msg, %struct.kernel_ipmi_msg* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load i64, i64* @IPMI_NETFN_FIRMWARE_REQUEST, align 8
  %25 = icmp eq i64 %23, %24
  br label %26

26:                                               ; preds = %20, %14, %8
  %27 = phi i1 [ true, %14 ], [ true, %8 ], [ %25, %20 ]
  %28 = zext i1 %27 to i32
  ret i32 %28
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
